--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -12,7 +12,7 @@
             </li>
         </ul>
     </div>
-    <div class="w-full lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-2 flex justify-end">
+    <div class="lg:w-full w-[95%] lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-2 flex justify-end">
         <button class="rounded-full bg-[#BAD5E6] lg:px-6 px-3 lg:py-1 text-sm hover:underline" (click)="percentageStanding=true;
             nameStanding=false;
             crescente=false;
