--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <!-- <nav class="h-16">
     <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16">
         <div class="w-[10%] flex justify-center items-center">
-            <img [routerLink]="['/home']" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
+            <img routerLink="/home" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
         </div>
         <div class="w-[60%] flex justify-center">
             <ul class="h-full w-full flex justify-around items-center text-white">
-                <li [routerLink]="['/home']"><button>NBA</button></li>
-                <li [routerLink]="['/classifica']"><button>CLASSIFICA</button></li>
-                <li [routerLink]="['/calendario']"><button>CALENDARIO</button></li>
-                <li [routerLink]="['/squadre']"><button>SQUADRE</button></li>
-                <li [routerLink]="['/storia&regole']"><button>STORIA & REGOLE</button></li>
-                <li [routerLink]="['/blog']"><button>BLOG</button></li>
+                <li routerLink="/home"><button>NBA</button></li>
+                <li routerLink="/classifica"><button>CLASSIFICA</button></li>
+                <li routerLink="/calendario"><button>CALENDARIO</button></li>
+                <li routerLink="/squadre"><button>SQUADRE</button></li>
+                <li routerLink="/storiaegole']"><button>STORIA & REGOLE</button></li>
+                <li routerLink="/blog"><button>BLOG</button></li>
             </ul>
         </div>
         <div class="w-[30%] flex justify-end h-full items-center">
@@ -30,16 +30,16 @@
 <nav class="h-16">
     <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16">
         <div class="w-[10%] flex justify-center items-center">
-            <img [routerLink]="['/home']" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
+            <img routerLink="/home" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
         </div>
         <div class="w-[50%]">
             <ul class="h-full flex justify-around items-center text-white">
-                <li [routerLink]="['/home']"><button>NBA</button></li>
-                <li [routerLink]="['/classifica']"><button>CLASSIFICA</button></li>
-                <li [routerLink]="['/calendario']"><button>CALENDARIO</button></li>
-                <li [routerLink]="['/squadre']"><button>SQUADRE</button></li>
-                <li [routerLink]="['/storia&regole']"><button>STORIA & REGOLE</button></li>
-                <li [routerLink]="['/blog']"><button>BLOG</button></li>
+                <li routerLink="/home"><button>NBA</button></li>
+                <li routerLink="/classifica"><button>CLASSIFICA</button></li>
+                <li routerLink="/calendario"><button>CALENDARIO</button></li>
+                <li routerLink="/squadre"><button>SQUADRE</button></li>
+                <li routerLink="/storia&regole"><button>STORIA & REGOLE</button></li>
+                <li routerLink="/blog"><button>BLOG</button></li>
             </ul>
         </div>
         <div class="w-[40%] flex justify-end h-full items-center flex-nowrap mr-10">
@@ -63,17 +63,17 @@
 <!-- <nav class="h-20">
     <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-20">
         <div class="w-[10%] flex justify-center items-center">
-            <img [routerLink]="['/home']" class="object-contain h-full py-3" src="assets/logo-slam-stats.png" alt="">
+            <img routerLink="/home" class="object-contain h-full py-3" src="assets/logo-slam-stats.png" alt="">
         </div>
         <div class="w-[90%] flex flex-nowrap justify-between">
             <div class="w-[60%]">
                 <ul class="w-full h-full flex justify-around items-end pb-3 text-white">
-                    <li [routerLink]="['/home']"><button>NBA</button></li>
-                    <li [routerLink]="['/classifica']"><button>CLASSIFICA</button></li>
-                    <li [routerLink]="['/calendario']"><button>CALENDARIO</button></li>
-                    <li [routerLink]="['/squadre']"><button>SQUADRE</button></li>
-                    <li [routerLink]="['/storia&regole']"><button>STORIA & REGOLE</button></li>
-                    <li [routerLink]="['/blog']"><button>BLOG</button></li>
+                    <li routerLink="/home"><button>NBA</button></li>
+                    <li routerLink="/classifica"><button>CLASSIFICA</button></li>
+                    <li routerLink="/calendario"><button>CALENDARIO</button></li>
+                    <li routerLink="/squadre"><button>SQUADRE</button></li>
+                    <li routerLink="/storiaegole']"><button>STORIA & REGOLE</button></li>
+                    <li routerLink="/blog"><button>BLOG</button></li>
                 </ul>
             </div>
             <div class="w-[40%] flex justify-end h-full items-end">
@@ -94,17 +94,17 @@
 <nav class="h-20">
     <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-20">
         <div class="w-[10%] flex justify-center items-center">
-            <img [routerLink]="['/home']" class="object-contain h-full py-3" src="assets/logo-slam-stats.png" alt="">
+            <img routerLink="/home" class="object-contain h-full py-3" src="assets/logo-slam-stats.png" alt="">
         </div>
         <div class="w-[90%] flex flex-nowrap justify-between">
             <div class="w-[60%]">
                 <ul class="w-full h-full flex justify-around items-center text-white">
-                    <li [routerLink]="['/home']"><button>NBA</button></li>
-                    <li [routerLink]="['/classifica']"><button>CLASSIFICA</button></li>
-                    <li [routerLink]="['/calendario']"><button>CALENDARIO</button></li>
-                    <li [routerLink]="['/squadre']"><button>SQUADRE</button></li>
-                    <li [routerLink]="['/storia&regole']"><button>STORIA & REGOLE</button></li>
-                    <li [routerLink]="['/blog']"><button>BLOG</button></li>
+                    <li routerLink="/home"><button>NBA</button></li>
+                    <li routerLink="/classifica"><button>CLASSIFICA</button></li>
+                    <li routerLink="/calendario"><button>CALENDARIO</button></li>
+                    <li routerLink="/squadre"><button>SQUADRE</button></li>
+                    <li routerLink="/storiaegole']"><button>STORIA & REGOLE</button></li>
+                    <li routerLink="/blog"><button>BLOG</button></li>
                 </ul>
             </div>
             <div class="w-[40%] flex justify-end h-full items-center">
