--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -130,13 +130,13 @@
                         <div class="w-1/2 h-28 bg-primary"></div>
                     </div>
                     <div class="my-5 w-[90%]" *ngFor="let player of teamsPlayer">
-                        <div class="w-full h-auto flex flex-nowrap justify-between">
-                            <div class="w-1/3 h-full border-primary flex justify-center flex-wrap">
+                        <div class="w-full h-auto flex lg:flex-nowrap flex-wrap justify-between">
+                            <div class="lg:w-1/3 w-full h-full border-primary flex justify-center flex-wrap">
                                 <p class="w-full text-center">{{player.lastName}} {{player.firstName}}</p>
                                 <p class="w-full text-center"></p>
                                 <p class="w-full text-center">RUOLO</p>
                             </div>
-                            <div class="w-1/3 h-full border-x-2 border-primary flex justify-center flex-wrap">
+                            <div class="lg:w-1/3 w-full h-full border-x-2 border-primary flex justify-center flex-wrap">
                                 <div class="flex justify-center flex-wrap w-full">
                                     <p class="w-full text-center">Data di nascita: {{player.birthDate}}</p>
                                     <p class="w-full text-center">Età:{{player.birthDate}} </p>
@@ -146,7 +146,7 @@
                                     <p class="w-full text-center">Minuti:{{player.}}</p> -->
                                 </div>
                             </div>
-                            <div class="w-1/3 h-full border-primary flex justify-center flex-wrap">
+                            <div class="lg:w-1/3 w-full h-full border-primary flex justify-center flex-wrap">
                                 <p class="w-full text-center">Anno di inizio: {{player.nbaStart}}</p>
                                 <p class="w-full text-center">College: {{player.college}}</p>
                                 <p class="w-full text-center"></p>
