--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -39,7 +39,7 @@
                         <div class="w-1/2 h-28 border-l-2 border-white text-white flex flex-wrap justify-center items-center bg-primary">
                             <ul class="px-8">
                                 <li class="lg:w-full w-full h-1/2 text-sm">
-                                    <p class="lg:text-xl text-xs"><b class="lg:text-2xl text-sm">Città</b><span>:</span> TD Garden</p>
+                                    <p class="lg:text-xl text-xs"><b class="lg:text-2xl text-sm">Città</b><span>:</span> {{teamStatistics!.team.city}}</p>
                                 </li>
                                 <!-- <li class="lg:w-full w-full h-1/2 text-sm">
                                     <p class="lg:text-xl text-xs"><b class="lg:text-2xl text-sm">Località</b><span>:</span>
@@ -50,88 +50,85 @@
                             </ul>
                         </div>
                         <div class="w-full h-auto border-t-4 border-white">
-                            <div class="w-full flex justify-center ">
-                                <div class="w-[90%] bg-white text-center">STATISTICHE STAGIONE:</div>
-                            </div>
-                            <div class="w-full flex flex-wrap justify-center">
+                            <div class="w-full flex flex-wrap justify-center mt-8 mb-8">
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">PARTITE GIOCATE</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Partite Giocate</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.games}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Punti Segnati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Punti Segnati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.points}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Tiri Realizzati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Realizzati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fgm}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Tiri Tentati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Tentati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fga}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Percentuale al Tiro</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Percentuale al Tiro</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fgp}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Tiri Liberi Segnati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Liberi Segnati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.ftm}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Tiri Liberi Tentati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Liberi Tentati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fta}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Percentuale ai Liberi</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Percentuale ai Liberi</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.ftp}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Tiri da Tre punti Segnati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri da Tre punti Segnati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.tpm}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Tiri da Tre punti Tentati</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri da Tre punti Tentati</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.tpa}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Percentuale da Tre Punti</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Percentuale da Tre Punti</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.tpp}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Rimbalzi Offensivi</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Rimbalzi Offensivi</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.offReb}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Rimbalzi Difensivi</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Rimbalzi Difensivi</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.defReb}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Rimbalzi Totali</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Rimbalzi Totali</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.totReb}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Assists</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Assists</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.assists}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Palle Rubate</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Palle Rubate</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.steals}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Palle Perse</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Palle Perse</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.turnovers}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Stoppate</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Stoppate</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.blocks}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Plus/Minus di Squadra</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Plus/Minus di Squadra</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.plusMinus}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold">Falli di Squadra</p>
+                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Falli di Squadra</p>
                                     <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.pfouls}}</p>
                                 </div>
                             </div>
@@ -158,10 +155,6 @@
                                         <p class="lg:block w-full hidden text-center px-3">ORARIO</p>
                                         <p class="lg:hidden text-center px-3">ORA</p>
                                     </th>
-                                   <!--  <th class="lg:w-[15%] w-[6%]">
-                                        <p class="lg:block hidden w-full text-center px-3">DATA E ORARIO</p>
-                                        <p class="lg:hidden w-full text-center px-3">DATA E ORA</p>
-                                    </th> -->
                                     <th class="lg:w-[15%] w-[2%]">
                                         <p class="lg:block w-full hidden text-center px-3">AVVERSARIO</p>
                                         <p class="lg:hidden text-center px-3">VS</p>
@@ -179,24 +172,21 @@
                             <tbody class="lg:w-full w-full" *ngFor="let match of matchCalendar.totalMatch, let i = index">
                                 <tr *ngIf="i <= cardToShow">
                                     <td class="lg:w-[15%] w-[3%]">
-                                        <p class="lg:block hidden w-full text-center px-3">11/01/2024</p>
-                                        <p class="lg:hidden w-full text-center px-3">11/01/24</p>
+                                        <p class="w-full text-center px-3">{{match?.matchDate}}</p>
                                     </td>
                                     <td class="lg:w-[10%] w-[3%]">
-                                        <p class="w-full text-center px-3">02:00</p>
+                                        <p class="w-full text-center px-3">{{match?.matchTime}}</p>
                                     </td>
-                                    <!-- <td class="lg:w-[15%] w-[6%]">
-                                        <p class="w-full text-center px-3">{{.gameStartDate}}</p>
-                                    </td> -->
                                     <td class="lg:w-[5%]  w-[2%]">
                                         <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code">{{match?.codeHome}}</p>
                                         <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code">{{match?.codeAway}}</p>
                                     </td>
                                     <td class="lg:w-[10%] w-[2%]">
-                                        <p class="w-full text-center px-3" *ngIf="match && teamStatistics && match?.codeHome !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match?.scoreTeamAway > match?.scoreTeamHome)">W</p>
-                                        <p class="w-full text-center px-3" *ngIf="match && teamStatistics && match?.codeHome !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match?.scoreTeamAway < match?.scoreTeamHome)">L</p>
-                
-                                    </td>
+                                        <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">W</p>
+                                        <p class="w-full text-center px-3" *ngIf="match?.codeHome === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">W</p>
+                                        <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">L</p>
+                                        <p class="w-full text-center px-3" *ngIf="match?.codeAway === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">L</p>
+                                   </td>
                                     
                                     <td class="lg:w-[10%] w-[56%]">
                                         <p class="w-full text-center px-3">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
