--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -58,14 +58,14 @@
             </div>
             <div class="hidden lg:flex lg:w-auto ">
                 <div class="flex justify-end">
-                    <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-4 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-                        REGOLAMENTO
+                    <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline" [routerLink]="['/storia&regole', 'regole']">
+                        REGOLE
                     </button>
                 </div>
             </div>
             <div class="hidden lg:flex lg:w-auto ">
                 <div class="flex justify-end">
-                    <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white  lg:px-6 px-3 lg:py-1 text-sm hover:underline">
+                    <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline" [routerLink]="['/storia&regole', 'glossario']">
                         GLOSSARIO
                     </button>
                 </div>
