--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -196,10 +196,10 @@
                             </tr>
                         </thead>
                         <tbody class="lg:w-full w-full">
-                            <tr *ngFor="let match of matchTodayLastTwenty">
-                                <td class="lg:w-[10%] w-[20%]">02:00</td>
-                                <td class="lg:w-[20%] w-[20%]">LAL-LAC</td>
-                                <td class="lg:w-[20%] w-[20%]">88-106</td>
+                            <tr *ngFor="let match of matchTodayLast20">
+                                <td class="lg:w-[10%] w-[20%]">{{match?.gameStartDate}}</td>
+                                <td class="lg:w-[20%] w-[20%]">{{match.codeAway}}-{{match.codeHome}}</td>
+                                <td class="lg:w-[20%] w-[20%]">{{match.scoreTeamAway}}-{{match.scoreTeamHome}}</td>
                                 <td colspan="2" class="lg:w-[35%] w-[6%]">
                                     <div class="lg:w-full w-full flex flex-nowrap items-center">
                                         <div class="lg:w-[50%] w-[50%] flex justify-center lg:justify-end lg:pr-2">
@@ -212,7 +212,7 @@
                                                 <path d="M 25 4.0625 C 12.414063 4.0625 2.0625 12.925781 2.0625 24 C 2.0625 30.425781 5.625 36.09375 11 39.71875 C 10.992188 39.933594 11 40.265625 10.71875 41.3125 C 10.371094 42.605469 9.683594 44.4375 8.25 46.46875 L 7.21875 47.90625 L 9 47.9375 C 15.175781 47.964844 18.753906 43.90625 19.3125 43.25 C 21.136719 43.65625 23.035156 43.9375 25 43.9375 C 37.582031 43.9375 47.9375 35.074219 47.9375 24 C 47.9375 12.925781 37.582031 4.0625 25 4.0625 Z M 25 5.9375 C 36.714844 5.9375 46.0625 14.089844 46.0625 24 C 46.0625 33.910156 36.714844 42.0625 25 42.0625 C 22.996094 42.0625 21.050781 41.820313 19.21875 41.375 L 18.65625 41.25 L 18.28125 41.71875 C 18.28125 41.71875 15.390625 44.976563 10.78125 45.75 C 11.613281 44.257813 12.246094 42.871094 12.53125 41.8125 C 12.929688 40.332031 12.9375 39.3125 12.9375 39.3125 L 12.9375 38.8125 L 12.5 38.53125 C 7.273438 35.21875 3.9375 29.941406 3.9375 24 C 3.9375 14.089844 13.28125 5.9375 25 5.9375 Z"></path>
                                             </svg>
                                         </div>
-                                        <div class="w-full flex justify-end"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1" routerLink="/tabellino">TABELLINO</button></div>
+                                        <div class="w-full flex justify-end"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1" [routerLink]="['/tabellino',match.gameid]">TABELLINO</button></div>
                                     </div>
                                 </td>
                             </tr>
